# AgileRL

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .readthedocs.yaml  AGENTS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  Ray_PyTorch_CUDA_Fix_Verification.md  agent_train.py  auth_arena.py  benchmarking.py  benchmarking_multi_agent.py  benchmarking_multi_ddpg.py  benchmarking_offline.py  benchmarking_offline_distributed.py  benchmarking_on_policy.py  benchmarking_online.py  benchmarking_online_distributed.py  checkpoint.pth  compare_ppo.py  demo.ipynb  demo.py  demo_offline.py  demo_offline_distributed.py  demo_on_policy.py  demo_online.py  demo_online_distributed.py  demo_online_multi_agent.py  dependabot.yml  dist_demo_offline.py  evolve_testing.py  ilql.py  make_evolvable_cnn_script.py  make_evolvable_script.py  mike_testing.py  mulit_agent_train.py  (+12 more)
.claude/: settings.local.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/codeql/: install_codeql.sh  run_codeql.py
.github/workflows/: codeql.yml  linux-tests.yml  macos-tests.yml  python-app.yml  windows-tests.yml
AgileRL/: benchmarking.py  benchmarking_auto.py  requirements.txt  utils.py
AgileRL/algorithms/: ddpg.py  dqn.py
AgileRL/components/: replay_buffer.py
AgileRL/hpo/: mutation.py  tournament.py
AgileRL/networks/: evolvable_mlp.py
AgileRL/training/: train.py
MakeEvolvableTesting/: ME_methods.py  ME_methods_2.py  main.py  make_evolvable_cnn_script.py  networks.py  test_loadcheckpoint.py
MakeEvolvableTesting/CNNs/: dqn_cnn_tests.py  ppo_cnn_tests.py
agilerl/: __init__.py  benchmarking.py  benchmarking_auto.py  configs.py  logger.py  metrics.py  population.py  protocols.py  train.py  trainer.py  typing.py  utils.py
agilerl/algorithms/: __init__.py  base.py  bc_lm.py  checkpoint.pth  cispo.py  cqn.py  cvar_ppo.py  ddpg.py  dpo.py  dqn.py  dqn_old.py  dqn_rainbow.py  dqn_rainbow_original.py  grpo.py  gspo.py  icm_ppo.py  ilql.py  ippo.py  iql.py  maddpg.py  matd3.py  neural_ts_bandit.py  neural_ucb.py  neural_ucb_bandit.py  ppo.py  ppo_llm.py  reinforce_llm.py  sft.py  td3.py
agilerl/arena/: __init__.py  agent.py  auth.py  cli.py  client.py  config.py  exceptions.py  inference.py  logs.py  models.py  output.py  payloads.py  stream.py
agilerl/buffers/: __init__.py  data.py  multi_agent_replay_buffer.py  replay_buffer.py  sampler.py  segment_tree.py
agilerl/components/: __init__.py  data.py  icm.py  multi_agent_replay_buffer.py  multi_agent_rollout_buffer.py  replay_buffer.py  replay_data.py  rollout_buffer.py  sampler.py  segment_tree.py  tensordict_buffer.py
agilerl/data/: language_environment.py  rl_data.py  tokenizer.py  torch_datasets.py
agilerl/hpo/: mutation.py  mutation_original.py  mutation_v2.py  tournament.py
agilerl/llm_envs/: __init__.py  base.py  sft.py  (+5 more)
benchmarking/: benchmarking_bandits.py  benchmarking_dpo.py  benchmarking_grpo.py  benchmarking_ibm.py  benchmarking_llm_multiturn.py  benchmarking_llm_preference.py  benchmarking_llm_reasoning.py  benchmarking_lstm.py  benchmarking_make_evo_multi.py  benchmarking_make_evo_off_policy.py  benchmarking_make_evo_on_policy.py  benchmarking_make_evo_rainbow.py  benchmarking_multi_agent.py  benchmarking_multi_agent_off_policy.py  benchmarking_multi_agent_on_policy.py  benchmarking_multi_agent_refactor.py  benchmarking_multi_input.py  benchmarking_off_policy.py  benchmarking_off_policy_distributed.py  benchmarking_offline.py  benchmarking_offline_distributed.py  benchmarking_on_policy.py  benchmarking_online.py  benchmarking_online_distributed.py  benchmarking_rainbow.py  benchmarking_recurrent.py  benchmarking_resnet.py  benchmarking_sft.py  benchmarking_simba.py  debugging_ppo.py  debugging_ppo_stage_1.py  debugging_ppo_stage_2.py  debugging_ppo_stage_3.py  debugging_value.py  legacy_mlp.py  make_evolvable_benchmarking.py  networks.py  plot_llm_metrics.py  scripties_1.py  scripties_2.py  (+1 more)
benchmarks/: __init__.py  llm.py  multi_agent.py  single_agent.py  trainer.py
debugging/: config_load.py  debugging_llm.py  debugging_llm_stage_1.py  debugging_llm_stage_2.py  debugging_llm_stage_3.py  debugging_llm_stage_3_async_wip.py  debugging_llm_training_matrix.py  debugging_value.py  run_stage3_custom.py  run_stage3_custom_async_wip.py  tiny_model.py
demos/: agent_train.py  demo_bandit.py  demo_custom_network.py  demo_llm_finetuning.py  demo_multi_agent.py  demo_off_policy.py  demo_off_policy_distributed.py  demo_offline.py  demo_offline_distributed.py  demo_on_policy.py  demo_on_policy_pendulum_rnn.py  demo_on_policy_rnn.py  demo_on_policy_rnn_cartpole.py  demo_on_policy_rnn_memory.py  demo_on_policy_rnn_memory_2.py  demo_on_policy_rnn_minigrid.py  demo_on_policy_rnn_noisy_cartpole.py  demo_online.py  demo_online_distributed.py  demo_online_multi_agent.py  performance_flamegraph_cartpole.py  performance_flamegraph_lunar_lander.py  performance_flamegraph_lunar_lander_rnn.py  performance_flamegraph_rnn_memory.py  plot_llm_metrics.py  plot_style.py
docs/: __init__.py  conf.py  index.rst  requirements.txt
make_evolvable_benchmarking/: make_evolvable_benchmarking.py  networks.py
scripts/: run_codeql.py
tests/: __init__.py  conftest.py  helper_functions.py  pz_vector_test_utils.py  sitecustomize.py  subprocess_runner.py  test_algo_utils.py  test_autoreset.py  test_bandit_env.py  test_cache.py  test_cqn.py  test_custom_activation.py  test_data.py  test_ddpg.py  test_dqn.py  test_dqn_rainbow.py  test_evolvable_bert.py  test_evolvable_cnn.py  test_evolvable_gpt.py  test_evolvable_mlp.py  test_ilql.py  test_ilql_utils.py  test_init.py  test_logger.py  test_maddpg.py  test_make_evolvable.py  test_matd3.py  test_metrics.py  test_minari_utils.py  test_multi_agent_replay_buffer.py  test_multiprocessing_env.py  test_mutation.py  test_neural_ts.py  test_neural_ucb.py  test_new_vector.py  test_placeholder.py  test_population.py  test_ppo.py  test_probe_envs.py  test_probe_envs_ma.py  (+19 more)
tutorials/: utils.py
(+708 files in other folders)
