[project]
name = "agilerl"
version = "2.5.0.dev0"
description = "AgileRL is a deep reinforcement learning library focused on improving RL development through RLOps."
authors = [{ name = "Nick Ustaran-Anderegg", email = "dev@agilerl.com" }]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10,<3.14"

dependencies = [
    "accelerate~=1.7.0",
    "dill~=0.3.7",
    "fastrand~=1.3.0",
    "flatten_dict~=0.4.2",
    "gymnasium~=1.0.0",
    "google-cloud-storage~=2.5.0",
    "h5py~=3.15.0",
    "hydra-core~=1.3.2",
    "matplotlib~=3.9.4,<3.10",
    "minari[all]==0.5.2",
    "numpy>=2.0.0,<3.0",
    "omegaconf~=2.3.0",
    "pandas~=2.2.3",
    "pettingzoo~=1.23.1",
    "jax[cpu]~=0.4.31",
    "packaging>=20.0",
    "pre-commit~=3.8.0",
    "pygame~=2.6.0",
    "pymunk~=6.2.0",
    "redis~=4.4.4",
    "SuperSuit~=3.9.0",
    "termcolor~=1.1.0",
    "torch==2.7.1",
    "tensordict~=0.8",
    "tqdm~=4.66.4",
    "ucimlrepo~=0.0.3",
    "wandb~=0.17.6",
]

[project.optional-dependencies]
llm = [
    "datasets==4.4.1",
    "deepspeed~=0.17.1",
    "peft~=0.18.0",
    "transformers~=4.57.1",
    "vllm~=0.10.0",
]
all = [
    "datasets==4.4.1",
    "deepspeed~=0.17.1",
    "peft~=0.18.0",
    "transformers~=4.57.1",
    "vllm~=0.10.0",
]

[dependency-groups]
dev = [
    "pytest~=9.0.2",
    "pytest-cov~=7.0.0",
]
docs = [
    "furo~=2025.12.19",
    "sphinx-github-changelog~=1.7.1",
    "sphinx-notfound-page~=1.1.0",
    "sphinx-toolbox~=4.1.2",
    "sphinxcontrib-googleanalytics~=0.5",
]

[tool.pytest.ini_options]
# Deterministic ordering for tests; useful for pytest-xdist.
env = ["PYTHONHASHSEED=0", "VLLM_ATTENTION_BACKEND=XFORMERS", "VLLM_USE_FLASHINFER_SAMPLER=0"]
filterwarnings = [
    # MakeEvolvable deprecation (use EvolvableModule/EvolvableNetwork instead)
    "ignore::DeprecationWarning:agilerl.wrappers.make_evolvable",
    # HPO: activation mutations not supported for some algorithms
    "ignore:Activation mutations are not supported for .*:UserWarning:agilerl.hpo.mutation",
    # Pygame warnings
    "ignore:pkg_resources is deprecated",
    "ignore:Deprecated call to `pkg_resources.*"
]
markers = [
    "llm: LLM-related tests (exclude with -m 'not llm')",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agilerl"]

[tool.hatch.build.targets.sdist]
exclude = ["tutorials"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "E501",      # line length handled by black
    "FIX",       # FIXMEs
    "TD",        # TODOs
    "D203",      # conflicts with D211
    "D213",      # conflicts with D212
    "ARG002",    # unused arguments ("kwargs", etc.)
    "ARG004",    # unused arguments (interface consistency)
    "ANN003",    # missing type for kwargs
    "ANN401",    # any types
    "FBT001",    # boolean trap
    "FBT002",    # boolean in function args
    "FBT003",    # boolean in function call
    "N812",      # import lowercase as upper
    "C901",      # complexity
    "PLR0912",   # too many branches
    "PLR0913",   # too many function arguments (>5)
    "PLR0915",   # function too long (>50 loc)
    "PLR0911",   # too many return statements in function (>6)
]

[tool.ruff.lint.per-file-ignores]
"{tests,benchmarking,demos,tutorials}/**" = [
    "S",         # security (assert, pseudo-random, etc.)
    "SLF001",    # private member access
    "ERA001",    # commented-out code
    "NPY002",    # legacy random
    "D",         # docstrings
    "ANN",       # type annotations
    "ARG",       # unused arguments (fixtures, etc.)
    "PLR",       # pylint refactor (magic values, complexity, etc.)
    "PLW2901",   # loop variable overwritten
    "FBT",       # boolean trap
    "PT",        # pytest style
    "N",         # naming conventions
    "PLC0415",   # import not at top
    "INP001",    # implicit namespace package
    "PTH",       # pathlib
    "C901",      # complexity
    "BLE001",    # blind except
    "TRY",       # tryceratops
    "RUF",       # ruff-specific
    "TD",        # TODOs
    "FIX",       # FIXMEs
    "PGH003",    # blanket type ignore
    "T201",      # print statements
]
